fixed image sizing/spacing

--- a/main.css
+++ b/main.css
@@ -56,11 +56,13 @@
   width: 10rem;
   margin: 1rem;
   background-color: green;
-  padding: 0.25rem 0.25rem 0 0.25rem;
+  padding: 0.5rem 0.5rem 0.25rem 0.5rem;
 }
 
 .project-image {
+  margin-top: 0.5rem;
   width: 100%;
+  max-height: auto;
 }
 
 #footer-container {
@@ -120,7 +122,6 @@
     max-width: 15rem; */
     flex: 0 0 30%;
     height: fit-content;
-    /* padding: 0.5rem 0.5rem 0 0.5rem; */
   }
   #footer-container {
     grid-area: 5 / 1 / 6 / 2;
